=== What's new in 2.0 Since 1.3

==== Spring Framework and Java Versions

The Spring for Apache Kafka project now requires Spring Framework 5.0 and Java 8.

==== @KafkaListener Changes

You can now annotate `@KafkaListener` methods (and classes, and `@KafkaHandler` methods) with `@SendTo`.
If the method returns a result, it is forwarded to the specified topic.
See <<annotation-send-to>> for more information.

==== Message Listeners

Message listeners can now be aware of the `Consumer` object.
See <<message-listeners>> for more information.

==== ConsumerAwareRebalanceListener

Rebalance listeners can now access the `Consumer` object during rebalance notifications.
See <<rebalance-listeners>> for more information.

==== @EmbeddedKafka Annotation

For convenience a test class level `@EmbeddedKafka` annotation is provided with the purpose to register `KafkaEmbedded` as a bean.
See <<testing>> for more information.
==== After rollback processing

Starting with _version 2.0.5_, a new `AfterRollbackProcessor` strategy is provided - see <<after-rollback>> for more information.
